--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -520,7 +520,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-AM_CPPFLAGS = 
+AM_CPPFLAGS = -I$(top_srcdir)/src
 AM_CFLAGS = 
 AM_LDFLAGS = 
 lib_LTLIBRARIES = libdatabuf.la
